Upgrade minimum JDK to version 8.